--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-    <title>404 Page not found :: &lt;&lt;Tech Dani&gt;&gt;</title>
+    <title>404 Page not found :: &lt;&lt;Dani Tech&gt;&gt;</title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -83,7 +83,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="" />
 <meta property="og:url" content="/404.html" />
-<meta property="og:site_name" content="&lt;&lt;Tech Dani&gt;&gt;" />
+<meta property="og:site_name" content="&lt;&lt;Dani Tech&gt;&gt;" />
 
   <meta property="og:image" content="/og-image.png">
 
@@ -113,7 +113,7 @@
     <div class="header__logo">
       <a href="/">
   <div class="logo">
-    Tech Dani &gt;&gt;&gt;
+    Dani Tech &gt;&gt;&gt;
   </div>
 </a>
 
